# jsondb-bot

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
jsondb_bot/: __init__.py  __main__.py
